--- a/server.properties
+++ b/server.properties
@@ -23,7 +23,7 @@ snooper-enabled=true
 level-type=default
 hardcore=false
 enable-status=true
-enable-command-block=false
+enable-command-block=true
 max-players=20
 network-compression-threshold=256
 resource-pack-sha1=
@@ -34,7 +34,7 @@ server-port=25565
 debug=false
 server-ip=
 spawn-npcs=true
-allow-flight=false
+allow-flight=true
 level-name=world
 view-distance=10
 resource-pack=
